fix: adjust checkbox icon size on mobile

--- a/theme.css
+++ b/theme.css
@@ -5,7 +5,7 @@ Created by Daniel (@danielkhmara) | https://github.com/danielkhmara/obsidian-lum
 
 ---------------------------------------------------------------------------------------
 
-Lumines Obsidian Version: 1.1.0-alpha.16
+Lumines Obsidian Version: 1.1.0-alpha.17
 Support Obsidian Version: 1.0.0+
 
 ---------------------------------------------------------------------------------------
@@ -2757,8 +2757,8 @@ input[type="checkbox"]:checked:hover {
 
 input[type="checkbox"]:checked::after {
    content: '';
-   width: var(--custom-icon-size);
-   height: var(--custom-icon-size);
+   /* width: var(--custom-icon-size);
+   height: var(--custom-icon-size); */
    background-color: var(--checkbox-icon-color, currentColor);
    mask-size: contain;
    mask-position: center;
